# gl_tut

./: CMakeLists.txt  NetrwTreeListing
src/: CMakeLists.txt  game.c  game.h  main.c
src/.cache/clangd/index/: game.c.1887079FF9AC44E7.idx  game.h.D8C3A0B8ADE02316.idx  gl.c.075EF78EB3B74615.idx  gl.c.8BA65AC9C3CCB63C.idx  gl.h.2C15EE242AEEB510.idx  gl.h.955BC417AD334E4C.idx  khrplatform.h.6CD273209835808A.idx  main.c.29EB61D9ADA62DEF.idx  stb_image.c.78F242451DB08887.idx  stb_image.h.1F01845ADFE10EB1.idx  tge_gl.c.067217152F752D2C.idx  tge_util.c.31000B887AF29AC5.idx  tge_window.c.299A58F8AA70AE90.idx  util.c.747AEB57031B0B8A.idx  util.h.39D646AD5B36B59B.idx  window.c.8292A5383E034815.idx  window.h.2BB24E612806CE4D.idx
src/libs/: CMakeLists.txt
src/libs/glad/include/glad/: gl.h
src/resources/textures/: blocks.tga
src/shaders/: or.fs  or.vs
src/tge/: CMakeLists.txt  gl.c  util.c  window.c
src/tge/include/tge/: gl.h  util.h  window.h
